# LLM-token-optimizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/stochat/: README.md  __init__.py  __main__.py  providers.py  test_stochat.py
examples/: 01_token_counting.py  02_optimize_conversation.py  03_cost_and_cache.py  04_credentials_and_routing.py  05_full_pipeline.py  README.md
src/smarttokenoptimizer/: __init__.py
src/smarttokenoptimizer/budgeting/: __init__.py  optimizer.py  result.py  strategies.py
src/smarttokenoptimizer/cache/: __init__.py  base.py  key.py  memory.py  sqlite.py
src/smarttokenoptimizer/cli/: __init__.py  dashboard.py  examples.py  interactive.py  live.py  main.py  screen.py  style.py
src/smarttokenoptimizer/compression/: __init__.py  base.py  pipeline.py  strategy.py  whitespace.py
src/smarttokenoptimizer/context/: __init__.py  dedup.py  window.py
src/smarttokenoptimizer/cost/: __init__.py  analytics.py  errors.py  estimator.py  pricing.py
src/smarttokenoptimizer/credentials/: __init__.py  credential.py  errors.py  pool.py  strategies.py
src/smarttokenoptimizer/middleware/: __init__.py  pipeline.py
src/smarttokenoptimizer/routing/: __init__.py  errors.py  policies.py  provider.py  router.py
src/smarttokenoptimizer/tokenization/: __init__.py  base.py  errors.py  heuristic.py  registry.py  tiktoken_backend.py  types.py
tests/: test_base.py  test_budgeting.py  test_cache.py  test_cli.py  test_cli_examples.py  test_cli_interactive.py  test_cli_live.py  test_compression.py  test_context.py  test_cost.py  test_credentials.py  test_examples.py  test_heuristic.py  test_middleware.py  test_registry.py  test_routing.py  test_tiktoken_backend.py
