[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "smarttokenoptimizer"
version = "0.3.0"
description = "Token optimization and AI credential management framework for LLM applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SmartTokenOptimizer contributors" }]
keywords = [
    "llm",
    "tokens",
    "tokenizer",
    "prompt-engineering",
    "openai",
    "anthropic",
    "cost-optimization",
    "credential-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# Core library has zero required runtime dependencies. Optional backends
# (exact tokenizers, provider SDKs) are pulled in via extras below.
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sto = "smarttokenoptimizer.cli.main:main"

[project.urls]
Homepage = "https://github.com/NSGsanji/LLM-token-optimizer"
Repository = "https://github.com/NSGsanji/LLM-token-optimizer"
Changelog = "https://github.com/NSGsanji/LLM-token-optimizer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/smarttokenoptimizer"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
# apps/ are terminal applications: allow angle-quote prompt glyphs, broad
# except for surfacing provider errors, and try/except/pass around readline.
"apps/*" = ["RUF001", "BLE001", "SIM105", "E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src/smarttokenoptimizer"]

[[tool.mypy.overrides]]
module = ["tiktoken.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["smarttokenoptimizer"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
